syntax = "proto3";
package coolcinema.three.rpc;
option go_package = "coolcinema/three/rpc";

service ThreeService {
  rpc CalculatePrice (CalculatePriceRequest) returns (CalculatePriceResponse);
}

message CalculatePriceRequest {
  string showtime_id = 1;
}

message CalculatePriceResponse {
  double amount = 1;
  string currency = 2;
}
